# DispatchLayer

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  DOMAIN_MODEL.md  LICENSE  Makefile  PYTHON_DEEPDIVE.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  sbom.json
apps/api/: Dockerfile  pyproject.toml
apps/api/src/dispatchlayer_api/: __init__.py  config.py  main.py
apps/api/src/dispatchlayer_api/routes/: __init__.py  anomalies.py  audit.py  connectors.py  dispatch.py  forecasts.py  ingest.py  predictive.py  providers.py  recommendations.py  signals.py  sites.py  system.py  telemetry.py
apps/api/src/gridforge_api/: __init__.py  config.py  main.py
apps/api/src/gridforge_api/routes/: anomalies.py  audit.py  dispatch.py  forecasts.py  ingest.py  predictive.py  recommendations.py  sites.py
apps/api/tests/fixtures/: scada_fleet_snapshot.json
apps/dashboard/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/dashboard/src/: App.tsx  App.vue  index.css  main.ts  main.tsx  router.test.ts  router.ts  theme.ts
apps/dashboard/src/components/: AuditTimeline.tsx  DashboardCard.tsx  EventStream.tsx  HelixDisplay.tsx  MetricCard.tsx  NavBar.tsx  ProviderSourcePanel.tsx  RecommendationTable.tsx  StatCard.tsx  StatCard.vue  StatusBadge.tsx  StatusBadge.vue  ToolsModal.vue
apps/dashboard/src/lib/: api-types.ts  api.ts  overview.ts  proofs.ts  types.ts
apps/dashboard/src/lib/proofs/: computeForecastBand.ts  computeProofMetrics.ts  computeSpectralView.ts  loadProofDataset.ts  types.ts
apps/dashboard/src/pages/: ArchitectureStatus.vue  AssetHealth.tsx  AssetHealth.vue  AuditTrail.tsx  AuditTrail.vue  BandsPage.vue  BatteryDispatch.tsx  BatteryDispatch.vue  ChartsPage.tsx  ChartsPage.vue  ExecutiveOverview.vue  ForecastingPage.vue  GenerationForecast.tsx  GenerationForecast.vue  GovernancePage.vue  HistoryPage.tsx  HistoryPage.vue  NotConnected.tsx  PipelineState.tsx  PipelineState.vue  PortfolioOperations.vue  PortfolioOverview.tsx  PortfolioOverview.vue  Proofs.tsx  ProofsPage.vue  ProviderStatus.tsx  ProviderStatus.vue  Recommendations.tsx  ReplayPage.tsx  ReplayPage.vue  SiteEvaluation.tsx  SiteEvaluation.vue  SourceLineage.vue  SourcesPage.vue  TelemetryDashboard.tsx  TelemetryDashboard.vue  TelemetryReplay.vue
apps/dashboard/src/react-backup/: index.css
apps/dashboard/src/shell/: AppShell.tsx  EmptyState.tsx  NavRail.tsx
data/raw/curl/: manifest.json  nasa_power_5y_MCW.json  open_meteo_archive_5y_MCW.json  open_meteo_forecast_MCW.json  openei_submissions_index.html  openwindscada_README.md  openwindscada_repo_root.json  pvdaq_datagov_dataset_page.html  pvdaq_datagov_search_alt.json  pvdaq_openei_page.html  pvdaq_openei_submission_4568.html  pvdaq_s3_listing_csv.xml  pvdaq_s3_listing_parquet.xml  pvdaq_systems_20250729.csv
data/raw/curl/production_demo/: README.md  catalog.json
data/source_snapshots/weather/: README.md
docs/: analysis-guide.md  connector-strategy.md  data-policy.md  product-boundary.md  proofs-method.md
docs/mathematics/: causal-attribution.md  confidence-scoring.md  decision-trace.md  forecast-reconciliation.md  predictive-math-core.md  residual-analysis.md
scripts/: capture_all_recommended_sources.py  capture_eia930_snapshot.py  capture_nasa_power_snapshot.py  capture_open_meteo_archive_snapshot.py  capture_open_meteo_snapshot.py  capture_openwind_snapshot.py  capture_pvdaq_snapshot.py  capture_weather_snapshot.py  dev_stack.ps1  download_free_public_5y.py  download_production_demo_data.py  fetch_source_data.sh
(+43 files in other folders)
