# Proprietary (c) Ryan Walsh / Walsh Tech Group
# All rights reserved. Professional preview only.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dispatchlayer-api"
version = "0.1.0"
description = "DispatchLayer FastAPI REST service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "dispatchlayer-domain>=0.1.0",
    "dispatchlayer-predictive>=0.1.0",
    "dispatchlayer-forecasting>=0.1.0",
    "dispatchlayer-anomaly>=0.1.0",
    "dispatchlayer-dispatch>=0.1.0",
    "dispatchlayer-signals>=0.1.0",
    "dispatchlayer-connector-otel>=0.1.0",
    "dispatchlayer-connector-opcua>=0.1.0",
    "dispatchlayer-connector-mqtt>=0.1.0",
    "dispatchlayer-connector-sitewise>=0.1.0",
    "dispatchlayer-connector-parquet>=0.1.0",
    "dispatchlayer-adapter-open-meteo>=0.1.0",
    "dispatchlayer-adapter-noaa-nws>=0.1.0",
    "dispatchlayer-adapter-nasa-power>=0.1.0",
    "dispatchlayer-adapter-nrel>=0.1.0",
    "dispatchlayer-adapter-eia>=0.1.0",
    "dispatchlayer-adapter-entsoe>=0.1.0",
    "pydantic-settings>=2.0",
    "httpx>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dispatchlayer_api"]
